# zephyr_playground

./: .gitignore  CMakeLists.txt  prj.conf  sample.yaml
edge-impulse-custom/ingestion-sdk-c/: ei_run_impulse.cpp
edge-impulse-custom/ingestion-sdk-platform/NordicSemi-nrf52/sensors/: ei_microphone.cpp
edge-impulse/ingestion-sdk-c/: ei_run_impulse.cpp
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf52/: ei_device_nordic_nrf52.cpp  ei_main.cpp
edge-impulse/ingestion-sdk-platform/NordicSemi-nrf52/sensors/: ei_microphone.cpp
keyword_test2-v16/edge-impulse-sdk/porting/lib/: EiImageNN.h  ei_image_lib.cpp
keyword_test2-v16/model-parameters/: model_metadata.h
keyword_test2-v4-v9/model-parameters/: model_metadata.h
model-parameters/: dsp_blocks.h  model_metadata.h
src/: ei_microphone.cpp  main.c  main.cpp
src/include/: ei_microphone.h  input_data.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
